fix-logic-check-in-and-out-schedule